Delete Math.Round() for Integer variables and inefficient new Integer, Long constructor; used valueOf() instead